syntax = "proto3";

option go_package = "/grpc/pb/auth;pb";

/*import "google/protobuf/empty.proto";*/
import "google/protobuf/timestamp.proto";

package auth;

service Auth {
  rpc Register(RegisterRequest) returns (Token);
  rpc ConfirmRegister(Token) returns (User);
  rpc Login(LoginRequest) returns (Tokens);
  rpc VerifyTokenAndGetId(Token) returns (Identity);
  rpc RefreshTokens(Token) returns (Tokens);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message Token {
  string token = 1;
}

message Identity {
  string userId = 1;
}

message User {
  string                    id = 1;
  string                    email = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  int32                     status = 5;
}

message Tokens {
  string accessToken = 1;
  string refreshToken = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}